# lickauto

./: README.rst  pyproject.toml
lickauto/: teensy_comm.py
teensy/lickauto/: host_comm.cpp  host_comm.h  i2c_board.cpp  i2c_board.h  lickauto.ino  marker.cpp  marker.h  utils.cpp  utils.h
